// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/training/question when invalid state should render component 1`] = `
Array [
  <header
    className="sc-Rmtcm bbSMDR"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-hzDkRC fJfPcM"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-bRBYWo grULuh"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-eqIVtm hhOipb"
  >
    <div
      className="sc-gipzik lbtmUQ"
    >
      <p
        className="sc-csuQGl eWBLyT"
      >
        不正な遷移を行いました。前の画面からやり直してください。
      </p>
    </div>
  </div>,
]
`;

exports[`/training/question when valid state should render component 1`] = `
Array [
  <header
    className="sc-Rmtcm bbSMDR"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-hzDkRC fJfPcM"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-bRBYWo grULuh"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-eqIVtm hhOipb"
  >
    <div
      className="sc-gipzik lbtmUQ"
    >
      <p
        className="sc-csuQGl eWBLyT"
      >
        指定した条件の歌はありませんでした
      </p>
    </div>
  </div>,
]
`;
